flux/apps/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita

spec:
  selector:
    app: kavita

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
